--- a/SERVER-ONLY/SERVER-ONLY.vbproj
+++ b/SERVER-ONLY/SERVER-ONLY.vbproj
@@ -53,10 +53,6 @@
       <HintPath>..\packages\Spire.Office.2.14.5\lib\net20\Spire.Barcode.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Spire.Common, Version=1.2.455.4020, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
-      <HintPath>..\packages\Spire.Office.2.14.5\lib\net20\Spire.Common.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Spire.DataExport, Version=3.5.102.4020, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
       <HintPath>..\packages\Spire.Office.2.14.5\lib\net20\Spire.DataExport.dll</HintPath>
       <Private>True</Private>
@@ -73,14 +69,6 @@
       <HintPath>..\packages\Spire.Office.2.14.5\lib\net20\Spire.DocViewer.Forms.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Spire.License, Version=1.3.5.20, Culture=neutral, PublicKeyToken=b1144360237c8b3f, processorArchitecture=MSIL">
-      <HintPath>..\packages\Spire.Office.2.14.5\lib\net20\Spire.License.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Spire.Pdf, Version=3.7.216.4020, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
-      <HintPath>..\packages\Spire.Office.2.14.5\lib\net20\Spire.Pdf.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="Spire.PdfViewer.Forms, Version=2.10.17.4320, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
       <HintPath>..\packages\Spire.Office.2.14.5\lib\net20\Spire.PdfViewer.Forms.dll</HintPath>
       <Private>True</Private>
@@ -91,10 +79,6 @@
     </Reference>
     <Reference Include="Spire.Spreadsheet, Version=2.1.9.4020, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
       <HintPath>..\packages\Spire.Office.2.14.5\lib\net20\Spire.Spreadsheet.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Spire.XLS, Version=7.10.50.4020, Culture=neutral, PublicKeyToken=663f351905198cb3, processorArchitecture=MSIL">
-      <HintPath>..\packages\Spire.Office.2.14.5\lib\net20\Spire.XLS.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -140,6 +124,7 @@
   <ItemGroup>
     <Content Include="App_Data\ERR\ERR.accdb" />
     <Content Include="Default.aspx" />
+    <Content Include="JUNK\MIX.txt" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
