--- a/SERVER-ONLY/Web.config
+++ b/SERVER-ONLY/Web.config
@@ -8,6 +8,7 @@
 <configuration>
     <system.web>
       <compilation debug="true" strict="false" explicit="true" targetFramework="4.0" />
+        <customErrors mode="Off"/>
     </system.web>
  <appSettings>
     <add key="dlrpset" value="true"/>
