--- a/SERVER-ONLY/Web.config
+++ b/SERVER-ONLY/Web.config
@@ -7,10 +7,24 @@
 
 <configuration>
     <system.web>
-      <compilation debug="true" strict="false" explicit="true" targetFramework="4.0" />
+    	<compilation debug="true" strict="false" explicit="true" targetFramework="4.0" />
         <customErrors mode="Off"/>
     </system.web>
+	<system.net>
+	<mailSettings>
+			<smtp from="brelcworks@gmail.com">
+                <network host="smtp.gmail.com" 
+                 port="587" 
+                 userName="brelcworks@gmail.com" 
+                 password="ratanbose" 
+                 enableSsl="true"/>
+            </smtp>
+		</mailSettings>
+	</system.net>
  <appSettings>
     <add key="dlrpset" value="true"/>
+	<add key="rtrckr" value="true"/>
+	<add key="monrep" value="true"/>
+	<add key="dlrep" value="true"/>
  </appSettings>
 </configuration>
